@@ -38,5 +38,5 @@ Gem::Specification.new do |s|
       %w(COPYING README ChangeLog adwords_api.yml)
   s.test_files = ['test/suite_unittests.rb']
   s.add_dependency('savon', '~> 0.9.9')
-  s.add_dependency('google-ads-common', '~> 0.7.0')
+  s.add_dependency('google-ads-common', '~> 0.7.1')
 end
