@@ -208,8 +208,8 @@ respond in gzipped format. All requests are sent uncompressed regardless.
 External dependencies should be pulled automatically on gem install. Here is the
 list though:
 
-  - Google Ads Common library (google-ads-common-0.7.0);
-  - Savon 'the heavy metal Ruby SOAP client' (savon-0.9.9).
+  - Google Ads Common library (google-ads-common);
+  - Savon 'the heavy metal Ruby SOAP client' (savon).
 
 
 = Where do I submit bug reports and feature requests?
